PROJECT(ReaDDy2 C CXX)

# includes
INCLUDE_DIRECTORIES(${READDY_GLOBAL_INCLUDE_DIR} ${ReaDDy2_io_INCLUDE_DIRS})

# sources
LIST(APPEND READDY_SOURCES Simulation.cpp)

# create library
ADD_LIBRARY(${PROJECT_NAME} STATIC ${READDY_SOURCES} ${READDY_GLOBAL_INCLUDE_DIR})
# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy2_io ${READDY_LIBRARIES})
# use c++11
set_property (TARGET ${PROJECT_NAME} PROPERTY COMPILE_FLAGS -std=c++11)

SET(${PROJECT_NAME}_INCLUDE_DIRS ${READDY_GLOBAL_INCLUDE_DIR} ${ReaDDy2_io_INCLUDE_DIRS} CACHE INTERNAL "${PROJECT_NAME}: Include directories" FORCE)