PROJECT(ReaDDy2 C CXX)

# sources
LIST(APPEND READDY_SOURCES Simulation.cpp)

# create library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_SOURCES} ${READDY_GLOBAL_INCLUDE_DIR})

# includes
SET(${PROJECT_NAME}_INCLUDE_DIRS "${READDY_GLOBAL_INCLUDE_DIR};${ReaDDy2_io_INCLUDE_DIRS};${ReaDDy2_plugin_INCLUDE_DIRS}" CACHE INTERNAL "${PROJECT_NAME}: Include directories" FORCE)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy2_common ReaDDy2_io ReaDDy2_plugin)
# use c++11
set_property (TARGET ${PROJECT_NAME} PROPERTY COMPILE_FLAGS -std=c++11)
