PROJECT(${READDY_PROJECT_NAME} C CXX)

# sources
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources_readdy.cmake")

# create library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_MAIN_SOURCES} ${READDY_GLOBAL_INCLUDE_DIR})

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${READDY_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
)
# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${READDY_DEPENDENT_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy2_common ReaDDy2_io ReaDDy2_plugin)

INSTALL(TARGETS ${READDY_PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)