# Find pthread library
FIND_PACKAGE(Threads REQUIRED)

LINK_DIRECTORIES(${GOOGLETEST_LIBRARY})
LINK_LIBRARIES(gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} ReaDDy2)


FILE(GLOB READDY_TEST_SOURCES *.cpp)
ADD_EXECUTABLE(runUnitTests ${READDY_TEST_SOURCES} ${GOOGLETEST_INCLUDE})

INCLUDE_DIRECTORIES(BEFORE ${ReaDDy2_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(runUnitTests ReaDDy2 ${gtest})

ADD_TEST(NAME readdy-tests COMMAND runUnitTests)