PROJECT(runUnitTests_cpu)

FIND_PACKAGE(Threads REQUIRED)

LIST(APPEND READDY_CPU_TEST_SOURCES CPUTestMain.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES CPUTestKernel.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES CPUTestNeighborList.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES CPUTestParallelizedGillespie.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES CPUTestReactions.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES TestParticleData.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES TestHilbertCurveIndexing.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${READDY_CPU_TEST_SOURCES} ${TESTING_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${TESTING_INCLUDE_DIR} ${CPU_INCLUDE_DIR} ${GOOGLETEST_INCLUDE} ${GOOGLEMOCK_INCLUDE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy ReaDDy_kernel_cpu gtest gtest_main gmock gmock_main)

ADD_TEST(NAME readdy-tests-cpu COMMAND ${PROJECT_NAME})

IF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)
    INSTALL(TARGETS ${PROJECT_NAME}
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
ENDIF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)