PROJECT(runUnitTests_cpu_dense)

FIND_PACKAGE(Threads REQUIRED)

LIST(APPEND READDY_CPU_TEST_SOURCES TestMain.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES TestNeighborList.cpp)
LIST(APPEND READDY_CPU_TEST_SOURCES TestReactions.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${READDY_CPU_TEST_SOURCES} ${TESTING_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${TESTING_INCLUDE_DIR} ${CPU_INCLUDE_DIR} ${GOOGLETEST_INCLUDE} ${GOOGLEMOCK_INCLUDE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy ReaDDy_kernel_cpu_dense gtest gtest_main gmock gmock_main)

ADD_TEST(NAME readdy-tests-cpu COMMAND ${PROJECT_NAME})

IF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)
    INSTALL(TARGETS ${PROJECT_NAME}
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
ENDIF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)