PROJECT(runUnitTests_singlecpu)

FIND_PACKAGE(Threads REQUIRED)

LIST(APPEND READDY_SINGLECPU_TEST_SOURCES TestMain.cpp)
LIST(APPEND READDY_SINGLECPU_TEST_SOURCES TestParticleData.cpp)
LIST(APPEND READDY_SINGLECPU_TEST_SOURCES TestReactions.cpp)
LIST(APPEND READDY_SINGLECPU_TEST_SOURCES TestNeighborList.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${READDY_SINGLECPU_TEST_SOURCES} ${GOOGLETEST_INCLUDE} ${ReaDDy_INCLUDE_DIRS} ${TESTING_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${ReaDDy_INCLUDE_DIRS} ${GOOGLETEST_INCLUDE} ${GOOGLEMOCK_INCLUDE} ${gtest_SOURCE_DIR} ${TESTING_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy gtest gtest_main gmock gmock_main ${CMAKE_THREAD_LIBS_INIT})

ADD_TEST(NAME readdy-tests-singlecpu COMMAND ${PROJECT_NAME})

IF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)
    INSTALL(TARGETS runUnitTests_singlecpu
            RUNTIME DESTINATION bin
            LIBRARY DESTINATION lib
            ARCHIVE DESTINATION lib)
ENDIF (READDY_INSTALL_UNIT_TEST_EXECUTABLE)