# general utilities.
PROJECT(ReaDDy_common CXX)

INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/sources_common.cmake")

ADD_LIBRARY(${PROJECT_NAME} ${READDY_COMMON_SOURCES} "${READDY_GLOBAL_INCLUDE_DIR}/readdy/common")

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDE_DIRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
    CXX_STANDARD ${READDY_STANDARD}
    CXX_STANDARD_REQUIRED ON
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${READDY_COMMON_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)