PROJECT(ReaDDy_plugin)

# sources
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/sources_plugin.cmake")

# library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_PLUGIN_SOURCES} "${PLUGIN_INCLUDE_DIRS}")

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${PLUGIN_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
)

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${READDY_PLUGIN_LIBRARIES} ReaDDy_kernel_singlecpu)

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)