# general utilities.
# default directory stuff (-> getenv thingy),
PROJECT(ReaDDy2_common CXX)

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost COMPONENTS system filesystem log thread REQUIRED)

LIST(APPEND READDY_COMMON_SOURCES Utils.cpp)

ADD_LIBRARY(${PROJECT_NAME} ${READDY_COMMON_SOURCES} "${READDY_GLOBAL_INCLUDE_DIR}/common")

SET(${PROJECT_NAME}_INCLUDE_DIRS "${READDY_GLOBAL_INCLUDE_DIR}/common;${Boost_INCLUDE_DIRS}" CACHE INTERNAL "${PROJECT_NAME}: Include directories" FORCE)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY COMPILE_FLAGS -std=c++11)

