# general utilities.
PROJECT(ReaDDy2_common CXX)

IF(${BUILD_SHARED_LIBS})
    set(Boost_USE_STATIC_LIBS OFF)
    set(Boost_USE_MULTITHREADED ON)
    set(Boost_USE_STATIC_RUNTIME OFF)
ELSE(${BUILD_SHARED_LIBS})
    set(Boost_USE_STATIC_LIBS ON)
    set(Boost_USE_MULTITHREADED ON)
    set(Boost_USE_STATIC_RUNTIME ON)
ENDIF(${BUILD_SHARED_LIBS})
FIND_PACKAGE(Boost 1.58 COMPONENTS system filesystem log thread REQUIRED)

LIST(APPEND READDY_COMMON_SOURCES Utils.cpp)

ADD_LIBRARY(${PROJECT_NAME} ${READDY_COMMON_SOURCES} "${READDY_GLOBAL_INCLUDE_DIR}/readdy/common")

SET(${PROJECT_NAME}_INCLUDE_DIRS "${READDY_GLOBAL_INCLUDE_DIR};${Boost_INCLUDE_DIRS}" CACHE INTERNAL "${PROJECT_NAME}: Include directories" FORCE)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${${PROJECT_NAME}_INCLUDE_DIRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILEFLAGS}"
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
