# general utilities.
PROJECT(ReaDDy2_common CXX)

INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources_common.cmake")

ADD_LIBRARY(${PROJECT_NAME} ${READDY_COMMON_SOURCES} "${READDY_GLOBAL_INCLUDE_DIR}/readdy/common")

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${COMMON_INCLUDE_DIRS})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILEFLAGS}"
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
