PROJECT(ReaDDy2_io CXX)

# sources
INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources_io.cmake")

# library
ADD_LIBRARY(${PROJECT_NAME} ${READDY_IO_SOURCES} "${READDY_GLOBAL_INCLUDE_DIR}/readdy/io")

# includes
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${IO_INCLUDE_DIRS}")

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    LINK_FLAGS "${EXTRA_LINK_FLAGS}"
    COMPILE_FLAGS "${EXTRA_COMPILEFLAGS}"
)

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ReaDDy2_common)
