PROJECT(ReaDDy2_model CXX)

INCLUDE("${READDY_GLOBAL_DIR}/cmake/sources/sources_model.cmake")

ADD_LIBRARY(${PROJECT_NAME} ${READDY_MODEL_SOURCES} ${MODEL_INCLUDE_DIRS})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${MODEL_INCLUDE_DIRS})

# Required on Unix OS family to be able to be linked into shared libraries.
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        POSITION_INDEPENDENT_CODE ON
        LINK_FLAGS "${EXTRA_LINK_FLAGS}"
        COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
)

# link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${READDY_MODEL_LIBRARIES} ReaDDy2_common)

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

